user and employee spreation phase 2
